--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "express": "^4.17.1",
     "express.js": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.3"
+    "mongoose": "^6.6.7",
+    "mongoose-unique-array": "^0.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
