--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "bootstrap4": "0.0.1-security",
     "cookie-parser": "^1.4.5",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-component": "^2.8.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
