--- a/client/.env
+++ b/client/.env
@@ -3,3 +3,4 @@ REACT_APP_USER_SIGNIN= 'http://localhost:5500/api/user/signin'
 REACT_APP_USER_SIGNOUT= 'http://localhost:5500/api/user/signout'
 REACT_APP_ADMIN_SIGNIN= 'http://localhost:5500/api/admin/signin'
 REACT_APP_ADMIN_REGISTER= 'http://localhost:5500/api/admin/register'
+REACT_APP_FEEDBACK= 'http://localhost:5500/api/feedback'
