--- a/client/.env
+++ b/client/.env
@@ -4,3 +4,5 @@ REACT_APP_USER_SIGNOUT= 'http://localhost:5500/api/user/signout'
 REACT_APP_ADMIN_SIGNIN= 'http://localhost:5500/api/admin/signin'
 REACT_APP_ADMIN_REGISTER= 'http://localhost:5500/api/admin/register'
 REACT_APP_FEEDBACK= 'http://localhost:5500/api/feedback'
+REACT_APP_ADD_COURSE= 'http://localhost:5500/api/course/add'
+REACT_APP_ALL_CTYPE= 'http://localhost:5500/api/course/all/'
