--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "express.js": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
