--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,5 +1,5 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+  "rewrites": [{ "source": "/client/(.*)", "destination": "/client" }],
   "outputDirectory": "public",
   "headers": [
     {
